[fix] news image stretch on responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ main, footer {
     vertical-align: top;
     height: 320px;
     max-width: 45%;
+    object-fit: cover;
 }
 
 .gallery .caption {
@@ -83,6 +84,7 @@ main, footer {
 .news-content table {
     vertical-align: center;
     border-spacing:0;
+    text-align: left;
 }
 
 #firstcolumn {
@@ -105,7 +107,6 @@ main, footer {
 .news-content thead {
     background-color: #4ea1ff;
     color:white;
-    text-align: left;
 }
 
 #interestedin {
